# brainfuck

./: CMakeLists.txt  Makefile  README.md  TODO.txt  build.sh  compiler.cpp  compiler.hpp  machine.cpp  machine.hpp  main.cpp  runner.cpp  runner.hpp
include/: compiler.hh  runner.hh
lib/: compiler.cc  machine.cc  runner.cc
src/: main.cc
